comprehensive_test_run_2.txt
cargo :    Compiling zero-wire v1.0.0 (
C:\Users\Revanth\Downloads\ZERO\zero-wi
re)
At line:1 char:1
+ cargo test --all-features 2>&1 | 
Out-File comprehensive_test_run_2.tx 
...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpeci 
   fied: (   Compiling ze...ZERO\zero  
  -wire):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCo 
   mmandError
 
   Compiling zero-dht v1.0.0 (C:\Users\
Revanth\Downloads\ZERO\zero-dht)
   Compiling zero-handshake v1.0.0 (C:\
Users\Revanth\Downloads\ZERO\zero-hands
hake)
   Compiling zero-protocol v1.0.0 (C:\U
sers\Revanth\Downloads\ZERO\zero-protoc
ol)
warning: unused import: 
`ZkxInitMessage`
 --> zero-handshake\tests\handshake_com
prehensive.rs:7:62
  |
7 |     use 
zero_handshake::x3dh::{X3dhInitiator, 
X3dhResponder, ZkxInitMessage};
  |                                    
                          
^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) on by 
default

warning: unused import: `decrypt`
   --> zero-handshake\tests\handshake_c
omprehensive.rs:120:42
    |
120 |         use 
zero_crypto::aead::{encrypt, decrypt};
    |                                  
        ^^^^^^^

warning: unused variable: `ct`
   --> zero-handshake\tests\handshake_c
omprehensive.rs:152:13
    |
152 |         let ct = 
encrypt(&alice_out.send_key, &zero_cryp
to::aead::AeadNonce::random(), pt, 
b"").unwrap();
    |             ^^ help: if this is 
intentional, prefix it with an 
underscore: `_ct`
    |
    = note: 
`#[warn(unused_variables)]` (part of 
`#[warn(unused)]`) on by default

warning: `zero-handshake` (test 
"handshake_comprehensive") generated 3 
warnings (run `cargo fix --test 
"handshake_comprehensive" -p 
zero-handshake` to apply 3 suggestions)
warning: unused import: 
`X25519PublicKey`
  --> zero-protocol\tests\comprehensive
_test.rs:13:42
   |
13 |     use 
zero_crypto::dh::{X25519Keypair, 
X25519PublicKey};
   |                                   
       ^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) on by 
default

warning: unused import: `rand::RngCore`
  --> zero-protocol\tests\comprehensive
_test.rs:88:13
   |
88 |         use rand::RngCore;
   |             ^^^^^^^^^^^^^

error[E0599]: no method named 
`open_outer` found for struct 
`ZsfEnvelope` in the current scope
   --> zero-protocol\tests\comprehensiv
e_test.rs:112:32
    |
112 |         let eve_result = outer.op
en_outer(&eve_relay_key.secret_key());
    |                                
^^^^^^^^^^ method not found in 
`ZsfEnvelope`

error[E0599]: no method named 
`open_outer` found for struct 
`ZsfEnvelope` in the current scope
   --> zero-protocol\tests\comprehensiv
e_test.rs:116:27
    |
116 |         let inner = outer.open_ou
ter(&bob_relay_key.secret_key()).unwrap
();
    |                           
^^^^^^^^^^ method not found in 
`ZsfEnvelope`

For more information about this error, 
try `rustc --explain E0599`.
warning: `zero-protocol` (test 
"comprehensive_test") generated 2 
warnings
error: could not compile 
`zero-protocol` (test 
"comprehensive_test") due to 2 
previous errors; 2 warnings emitted
warning: build failed, waiting for 
other jobs to finish...
